testsuite/tests/mdo/should_fail/mdofail005.stderr

mdofail005.hs:11:14: parse error on input ‘<-’
